--- a/misc/vera/Makefile
+++ b/misc/vera/Makefile
@@ -1,12 +1,12 @@
-# $NetBSD: Makefile,v 1.12 2005/03/24 21:12:58 wiz Exp $
+# $NetBSD: Makefile,v 1.13 2005/06/17 03:50:22 jlam Exp $
 
-DISTNAME=	vera-1.11
+DISTNAME=	vera-1.16
 CATEGORIES=	misc
 MASTER_SITES=	http://home.snafu.de/ohei/FTP/ \
 		${MASTER_SITE_GNU:=vera/}
 
 MAINTAINER=	tech-pkg@NetBSD.org
-HOMEPAGE=	http://userpage.fu-berlin.de/~oheiabbd/vera-e.html
+HOMEPAGE=	http://cgi.snafu.de/ohei/user-cgi-bin/veramain-e.cgi
 COMMENT=	Virtual Entity of Relevant Acronyms
 
 USE_MAKEINFO=	YES
@@ -18,6 +18,6 @@ do-build:
 	cd ${WRKSRC} && ${MAKEINFO} vera.texi
 
 do-install:
-	${INSTALL_DATA} ${WRKSRC}/vera.info* ${PREFIX}/info
+	${INSTALL_DATA} ${WRKSRC}/vera.info* ${PREFIX}/${INFO_DIR}
 
 .include "../../mk/bsd.pkg.mk"
