--- a/x11/Makefile
+++ b/x11/Makefile
@@ -1,9 +1,10 @@
-# $NetBSD: Makefile,v 1.412 2005/10/15 13:43:21 minskim Exp $
+# $NetBSD: Makefile,v 1.413 2005/10/15 16:37:54 wiz Exp $
 #
 
 COMMENT=	Packages to support the X window system
 
 SUBDIR+=	9term
+SUBDIR+=	Terminal
 SUBDIR+=	XF86Setup
 SUBDIR+=	XFree86-clients
 SUBDIR+=	XFree86-imake
