--- a/devel/Makefile
+++ b/devel/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.678 2005/10/11 15:34:21 joerg Exp $
+# $NetBSD: Makefile,v 1.679 2005/10/13 15:16:07 wiz Exp $
 #
 
 COMMENT=	Development utilities
@@ -454,6 +454,7 @@ SUBDIR+=	p5-Sub-Uplevel
 SUBDIR+=	p5-Term-ProgressBar
 SUBDIR+=	p5-Term-ReadKey
 SUBDIR+=	p5-Term-ReadLine
+SUBDIR+=	p5-Term-Screen
 SUBDIR+=	p5-Test-Builder-Tester
 SUBDIR+=	p5-Test-ClassAPI
 SUBDIR+=	p5-Test-Cmd
