--- a/editors/gedit/Makefile
+++ b/editors/gedit/Makefile
@@ -1,9 +1,9 @@
-# $NetBSD: Makefile,v 1.50 2005/07/21 16:29:49 wiz Exp $
+# $NetBSD: Makefile,v 1.51 2005/08/10 20:56:16 jlam Exp $
 #
 
-DISTNAME=		gedit-2.10.3
+DISTNAME=		gedit-2.12.1
 CATEGORIES=		editors gnome
-MASTER_SITES=		${MASTER_SITE_GNOME:=sources/gedit/2.10/}
+MASTER_SITES=		${MASTER_SITE_GNOME:=sources/gedit/2.12/}
 EXTRACT_SUFX=		.tar.bz2
 
 MAINTAINER=		tech-pkg@NetBSD.org
