--- a/misc/gnome2-utils/Makefile
+++ b/misc/gnome2-utils/Makefile
@@ -1,9 +1,9 @@
-# $NetBSD: Makefile,v 1.42 2005/07/21 16:29:53 wiz Exp $
+# $NetBSD: Makefile,v 1.43 2005/08/10 20:56:19 jlam Exp $
 #
 
-DISTNAME=		gnome-utils-2.10.1
+DISTNAME=		gnome-utils-2.12.1
 CATEGORIES=		misc gnome
-MASTER_SITES=		${MASTER_SITE_GNOME:=sources/gnome-utils/2.10/}
+MASTER_SITES=		${MASTER_SITE_GNOME:=sources/gnome-utils/2.12/}
 EXTRACT_SUFX=		.tar.bz2
 
 MAINTAINER=		rh@NetBSD.org
