--- a/time/evolution-webcal/Makefile
+++ b/time/evolution-webcal/Makefile
@@ -1,9 +1,9 @@
-# $NetBSD: Makefile,v 1.9 2005/07/21 16:29:58 wiz Exp $
+# $NetBSD: Makefile,v 1.10 2005/08/10 20:56:24 jlam Exp $
 #
 
-DISTNAME=	evolution-webcal-2.2.1
+DISTNAME=	evolution-webcal-2.4.1
 CATEGORIES=	time gnome
-MASTER_SITES=	${MASTER_SITE_GNOME:=sources/evolution-webcal/2.2/}
+MASTER_SITES=	${MASTER_SITE_GNOME:=sources/evolution-webcal/2.4/}
 EXTRACT_SUFX=	.tar.bz2
 
 MAINTAINER=	jmmv@NetBSD.org
