--- a/mail/exim/Makefile
+++ b/mail/exim/Makefile
@@ -1,6 +1,7 @@
-# $NetBSD: Makefile,v 1.68 2005/10/07 10:28:34 abs Exp $
+# $NetBSD: Makefile,v 1.69 2005/10/09 10:43:49 abs Exp $
 
 DISTNAME=	exim-4.54
+PKGREVISION=	1
 CATEGORIES=	mail net
 MASTER_SITES=	ftp://ftp.exim.org/pub/exim/exim4/ \
 		ftp://ftp.csx.cam.ac.uk/pub/software/email/exim/exim4/ \
