--- a/audio/p5-Audio-CD/Makefile
+++ b/audio/p5-Audio-CD/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.10 2005/07/13 18:01:18 jlam Exp $
+# $NetBSD: Makefile,v 1.11 2005/08/06 06:19:04 jlam Exp $
 #
 
 DISTNAME=	Audio-CD-0.05
@@ -6,10 +6,10 @@ PKGNAME=	p5-${DISTNAME}
 PKGREVISION=	3
 SVR4_PKGNAME=	p5acd
 CATEGORIES=	audio perl5
-MASTER_SITES=	http://homepages.cwi.nl/~jvhemert/files/
+MASTER_SITES=	http://www.vanhemert.co.uk/files/
 
 MAINTAINER=	drochner@NetBSD.org
-HOMEPAGE=	http://homepages.cwi.nl/~jvhemert/disc-cover.html
+HOMEPAGE=	http://www.vanhemert.co.uk/disc-cover.html
 COMMENT=	Audio-CD perl module for use with disc-cover
 
 PERL5_PACKLIST=		auto/Audio/CD/.packlist
