--- a/x11/gdm/Makefile
+++ b/x11/gdm/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.88 2005/09/27 22:19:41 mjl Exp $
+# $NetBSD: Makefile,v 1.89 2005/10/14 21:47:01 jmmv Exp $
 #
 
 DISTNAME=	gdm-2.8.0.5
@@ -24,6 +24,7 @@ USE_PKGINSTALL=		YES
 USE_PKGLOCALEDIR=	YES
 GNU_CONFIGURE=		YES
 USE_LIBTOOL=		YES
+USE_MSGFMT_PLURALS=	YES
 USE_TOOLS+=		gmake pkg-config
 
 PKG_OPTIONS_VAR=	PKG_OPTIONS.gdm
