--- a/devel/guile-oops/Makefile
+++ b/devel/guile-oops/Makefile
@@ -1,14 +1,14 @@
-# $NetBSD: Makefile,v 1.15 2004/10/15 14:50:06 tv Exp $
+# $NetBSD: Makefile,v 1.16 2005/04/11 21:45:25 tv Exp $
 #
 
 DISTNAME=	guile-oops-0.9.0
-PKGREVISION=	5
+PKGREVISION=	6
 CATEGORIES=	devel
 MASTER_SITES=	${MASTER_SITE_GNU:=guile/}
 
-MAINTAINER=	tech-pkg@NetBSD.org
+MAINTAINER=	gdt@NetBSD.org
 HOMEPAGE=	http://www.gnu.org/software/guile/
-COMMENT=	CLOS-like object system for Guile
+COMMENT=	CLOS-like object system for Guile 1.4
 
 CONFLICTS=	guile>1.4
 
