--- a/devel/guile-slib/Makefile
+++ b/devel/guile-slib/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.25 2005/05/09 20:30:42 kristerw Exp $
+# $NetBSD: Makefile,v 1.26 2005/06/16 06:57:46 jlam Exp $
 
 DISTNAME=	guile-slib-2.4.2
 PKGREVISION=	6
@@ -6,7 +6,7 @@ CATEGORIES=	devel
 MASTER_SITES=	# empty
 DISTFILES=	# empty
 
-MAINTAINER=	tech-pkg@NetBSD.org
+MAINTAINER=	gdt@NetBSD.org
 HOMEPAGE=	http://swissnet.ai.mit.edu/~jaffer/SLIB.html
 COMMENT=	SLIB glue files for guile 1.6
 
