--- a/www/clearsilver/Makefile.common
+++ b/www/clearsilver/Makefile.common
@@ -1,12 +1,9 @@
-# $NetBSD: Makefile.common,v 1.4 2005/04/11 21:47:52 tv Exp $
+# $NetBSD: Makefile.common,v 1.5 2005/05/22 20:08:44 jlam Exp $
 
 DISTNAME=		clearsilver-0.9.14
 CLEARSILVER_BASE=       ${DISTNAME:S/-/-base-/}
 CATEGORIES=		www
 MASTER_SITES=		http://www.clearsilver.net/downloads/
-
-# Work around ruby/modules.mk setting DIST_SUBDIR.
-DIST_SUBDIR=		.
 
 MAINTAINER=		epg@NetBSD.org
 HOMEPAGE=		http://www.clearsilver.net/
