--- a/devel/libmimedir/Makefile
+++ b/devel/libmimedir/Makefile
@@ -1,10 +1,9 @@
-# $NetBSD: Makefile,v 1.1.1.1 2005/10/13 15:15:28 wiz Exp $
+# $NetBSD: Makefile,v 1.2 2005/10/13 20:41:51 wiz Exp $
 #
 
-DISTNAME=		libmimedir-0.4
-PKGREVISION=		1
+DISTNAME=		libmimedir-0.5
 CATEGORIES=		devel
-MASTER_SITES=		${MASTER_SITE_SOURCEFORGE:=synce/}
+MASTER_SITES=		${MASTER_SITE_SOURCEFORGE:=libmimedir/}
 
 MAINTAINER=		tech-pkg@NetBSD.org
 HOMEPAGE=		http://sourceforge.net/projects/libmimedir/
