--- a/www/apache2/Makefile.common
+++ b/www/apache2/Makefile.common
@@ -1,11 +1,11 @@
-# $NetBSD: Makefile.common,v 1.17 2005/05/18 19:10:01 adrianp Exp $
+# $NetBSD: Makefile.common,v 1.18 2005/05/21 03:49:52 reed Exp $
 
 DISTNAME=		httpd-${APACHE_VERSION}
 EXTRACT_SUFX=		.tar.bz2
 # When updating this version be sure to update the checksum and remove
 # any PKGREVISION for devel/apr also.
-APACHE_VERSION=		2.0.54
-APR_VERSION=		0.9.6
+APACHE_VERSION=		2.0.55
+APR_VERSION=		0.9.7
 MASTER_SITES=		${MASTER_SITE_APACHE:=httpd/} \
 			${MASTER_SITE_APACHE:=httpd/old/} \
 			http://www.NetBSD.org/images/logos/
