--- a/net/net-snmp/Makefile
+++ b/net/net-snmp/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.35 2005/08/01 11:55:55 wiz Exp $
+# $NetBSD: Makefile,v 1.36 2005/08/06 06:19:24 jlam Exp $
 
 DISTNAME=	net-snmp-5.2.1.2
 PKGREVISION=	1
@@ -44,7 +44,7 @@ NET_SNMP_MIBDIRS?=		\$$HOME/.snmp/mibs:${PREFIX}/share/snmp/mibs:${PREFIX}/lib/t
 
 CONFIGURE_ARGS+=	--enable-shared
 CONFIGURE_ARGS+=	--with-defaults
-CONFIGURE_ARGS+=	--with-libwrap
+CONFIGURE_ARGS+=	--with-libwrap=${BUILDLINK_PREFIX.tcp_wrappers}/lib
 CONFIGURE_ARGS+=	--with-sys-contact="${NET_SNMP_SYS_CONTACT}"
 CONFIGURE_ARGS+=	--with-sys-location="${NET_SNMP_SYS_LOCATION}"
 #
