--- a/graphics/digikamimageplugins/Makefile
+++ b/graphics/digikamimageplugins/Makefile
@@ -1,6 +1,6 @@
-# $NetBSD: Makefile,v 1.3 2005/04/11 21:46:01 tv Exp $
+# $NetBSD: Makefile,v 1.4 2005/05/22 20:08:04 jlam Exp $
 
-DISTNAME=		digikamimageplugins-0.7.2
+DISTNAME=		digikamimageplugins-0.7.4
 CATEGORIES=		graphics kde
 MASTER_SITES=		${MASTER_SITE_SOURCEFORGE:=digikam/}
 EXTRACT_SUFX=		.tar.bz2
