--- a/mail/imp4/Makefile
+++ b/mail/imp4/Makefile
@@ -1,8 +1,7 @@
-# $NetBSD: Makefile,v 1.9 2005/09/08 04:15:07 ben Exp $
+# $NetBSD: Makefile,v 1.10 2005/09/28 14:31:07 rillig Exp $
 
 DISTNAME=	imp-h3-${IMPVER}
 PKGNAME=	imp-${IMPVER}
-PKGREVISION=	1
 CATEGORIES=	mail www
 MASTER_SITES=	ftp://ftp.horde.org/pub/imp/tarballs/
 
@@ -22,7 +21,7 @@ DOCDIR=		${PREFIX}/share/doc/imp
 EGDIR=		${PREFIX}/share/examples/imp
 HORDEDIR=	${PREFIX}/share/horde
 IMPDIR=		${HORDEDIR}/imp
-IMPVER=		4.0.3
+IMPVER=		4.0.4
 PAXDIRS=	lib locale po scripts templates themes
 
 MESSAGE_SUBST+=	IMPDIR=${IMPDIR}
