--- a/lang/Makefile
+++ b/lang/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.218 2005/07/21 00:14:43 rillig Exp $
+# $NetBSD: Makefile,v 1.219 2005/07/22 09:10:23 wiz Exp $
 #
 
 COMMENT=	Programming languages
@@ -177,6 +177,7 @@ SUBDIR+=	utilisp
 SUBDIR+=	vscm
 SUBDIR+=	vslisp
 SUBDIR+=	win32-jdk
+SUBDIR+=	wsbasic
 SUBDIR+=	yabasic
 SUBDIR+=	yap
 
