--- a/wm/windowlab/Makefile
+++ b/wm/windowlab/Makefile
@@ -1,7 +1,7 @@
-# $NetBSD: Makefile,v 1.10 2005/08/10 20:56:25 jlam Exp $
+# $NetBSD: Makefile,v 1.11 2005/09/04 06:05:20 xtraeme Exp $
 #
 
-DISTNAME=	windowlab-1.32
+DISTNAME=	windowlab-1.33
 CATEGORIES=	wm
 MASTER_SITES=	http://www.nickgravgaard.com/windowlab/
 EXTRACT_SUFX=	.tar
@@ -19,9 +19,6 @@ EGDIR=		${PREFIX}/share/examples/windowlab
 CONF_FILES=	${EGDIR}/windowlab.menurc ${PKG_SYSCONFDIR}/windowlab.menurc
 
 INSTALLATION_DIRS=	share/examples/windowlab
-
-post-extract:
-	@${CHMOD} -R +x ${WRKSRC}
 
 post-install:
 	${INSTALL_DATA_DIR} ${EGDIR}
