--- a/devel/libwnck/Makefile
+++ b/devel/libwnck/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.30 2005/08/26 16:25:05 drochner Exp $
+# $NetBSD: Makefile,v 1.31 2005/10/12 21:50:09 jmmv Exp $
 #
 
 DISTNAME=	libwnck-2.12.1
@@ -24,6 +24,7 @@ CONFIGURE_ARGS+=	--with-html-dir=${PREFIX}/share/doc
 .include "../../devel/gettext-lib/buildlink3.mk"
 .include "../../devel/glib2/buildlink3.mk"
 .include "../../devel/pango/buildlink3.mk"
+.include "../../textproc/intltool/buildlink3.mk"
 .include "../../x11/startup-notification/buildlink3.mk"
 .include "../../x11/gtk2/buildlink3.mk"
 .include "../../mk/bsd.pkg.mk"
