--- a/audio/mp3splt/Makefile
+++ b/audio/mp3splt/Makefile
@@ -1,7 +1,7 @@
-# $NetBSD: Makefile,v 1.8 2004/11/22 19:50:17 wiz Exp $
+# $NetBSD: Makefile,v 1.9 2005/04/11 21:44:55 tv Exp $
 #
 
-DISTNAME=		mp3splt-2.1-src
+DISTNAME=		mp3splt-2.1c-src
 PKGNAME=		${DISTNAME:S/-src//}
 CATEGORIES=		audio
 MASTER_SITES=		${MASTER_SITE_SOURCEFORGE:=mp3splt/}
