--- a/mail/sylpheed/Makefile
+++ b/mail/sylpheed/Makefile
@@ -1,6 +1,6 @@
-# $NetBSD: Makefile,v 1.79 2005/08/26 13:18:42 xtraeme Exp $
+# $NetBSD: Makefile,v 1.80 2005/09/29 22:50:13 chris Exp $
 
-DISTNAME=	sylpheed-2.0.2
+DISTNAME=	sylpheed-2.0.3
 CATEGORIES=	mail news x11
 #MASTER_SITES=	${MASTER_SITE_SOURCEFORGE:=sylpheed-claws/}
 MASTER_SITES=	http://sylpheed.good-day.net/sylpheed/v2.0/
