--- a/sysutils/855resolution/Makefile
+++ b/sysutils/855resolution/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.8 2004/07/21 21:16:10 salo Exp $
+# $NetBSD: Makefile,v 1.1 2005/10/12 02:06:37 christos Exp $
 #
 
 DISTNAME=	855resolution-0.4
@@ -9,6 +9,8 @@ EXTRACT_SUFX=	.tgz
 MAINTAINER=	tech-pkg@NetBSD.org
 HOMEPAGE=	http://perso.wanadoo.fr/apoirier/
 COMMENT=	BIOS VESA resolution utility for 855/865/915 Intel chips
+
+ONLY_FOR_PLATFORM=	NetBSD-*-i386
 
 WRKSRC=		${WRKDIR}/855resolution
 USE_TOOLS=	gmake
