--- a/chat/jabberd2/Makefile
+++ b/chat/jabberd2/Makefile
@@ -1,7 +1,7 @@
-# $NetBSD: Makefile,v 1.22 2005/08/03 22:21:36 xtraeme Exp $
+# $NetBSD: Makefile,v 1.23 2005/08/19 18:12:37 jlam Exp $
 #
 
-DISTNAME=		jabberd-2.0s9
+DISTNAME=		jabberd-2.0s10
 CATEGORIES=		chat
 MASTER_SITES=		http://files.jabberstudio.org/jabberd2/
 
