--- a/wm/fluxbox/Makefile
+++ b/wm/fluxbox/Makefile
@@ -1,7 +1,8 @@
-# $NetBSD: Makefile,v 1.27 2005/09/04 23:41:47 xtraeme Exp $
+# $NetBSD: Makefile,v 1.28 2005/09/27 12:49:04 tonio Exp $
 #
 
 DISTNAME=	fluxbox-0.9.14
+PKGREVISION= 1
 CATEGORIES=	wm x11
 MASTER_SITES=	${MASTER_SITE_SOURCEFORGE:=fluxbox/}
 EXTRACT_SUFX=	.tar.bz2
