--- a/sysutils/Makefile
+++ b/sysutils/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.309 2005/10/12 18:54:09 xtraeme Exp $
+# $NetBSD: Makefile,v 1.310 2005/10/13 20:59:26 agc Exp $
 #
 
 COMMENT=	System utilities
@@ -223,9 +223,9 @@ SUBDIR+=	xbattbar
 SUBDIR+=	xcdroast
 SUBDIR+=	xdu
 SUBDIR+=	xen12
+SUBDIR+=	xenkernel20
 SUBDIR+=	xentools12
 SUBDIR+=	xentools20
-SUBDIR+=	xenkernel20
 SUBDIR+=	xenvstat
 SUBDIR+=	xfce4-appfinder
 SUBDIR+=	xfce4-cpugraph-plugin
